--- a/tasks/linux/install-dynatrace-wsagent.yml
+++ b/tasks/linux/install-dynatrace-wsagent.yml
@@ -44,7 +44,7 @@
   sudo: yes
 
 - name: Configure the Dynatrace Collector host in the Dynatrace Web Server Agent's 'dtwsagent.ini' file
-  lineinfile: dest={{ dynatrace_wsagent_linux_install_dir }}/dynatrace/agent/conf/dtwsagent.ini regexp='^Server .*' line='Server {{ dynatrace_wsagent_collector_host }}'
+  lineinfile: dest={{ dynatrace_wsagent_linux_install_dir }}/dynatrace/agent/conf/dtwsagent.ini regexp='^Server .*' line='Server {{ dynatrace_wsagent_collector_hostname }}:{{ dynatrace_wsagent_collector_port }}'
   sudo: yes
 
 - name: Enable and start Dynatrace Web Server Agent services
