--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@ dynatrace_wsagent_name: dtwsagent
 dynatrace_wsagent_collector_hostname: localhost
 dynatrace_wsagent_collector_port: 9998
 
-dynatrace_wsagent_role_name: Dynatrace-WebServer-Agent
+dynatrace_wsagent_role_name: dynatrace.Dynatrace-WebServer-Agent
 
 # Do not change anything below unless you know what you are doing!
 dynatrace_wsagent_linux_service_names: [dynaTraceWebServerAgent]
