--- a/tasks/linux/install-dynatrace-wsagent.yml
+++ b/tasks/linux/install-dynatrace-wsagent.yml
@@ -1,4 +1,14 @@
 ---
+- name: Create the installation directory {{ dynatrace_wsagent_linux_install_dir }}
+  file: path="{{ dynatrace_wsagent_linux_install_dir }}" state=directory
+  register: dynatrace_wsagent_create_install_dir_result
+  sudo: yes
+
+- name: Change ownership of the installation directory if it had to be created
+  file: path="{{ dynatrace_wsagent_linux_install_dir }}" owner=dynatrace group=dynatrace
+  when: dynatrace_wsagent_create_install_dir_result|changed
+  sudo: yes
+
 - name: Unarchive the Dynatrace Web Server Agent installer to {{ dynatrace_wsagent_linux_install_dir }}
   unarchive: src="{{ playbook_dir }}/roles/{{ dynatrace_wsagent_role_name }}/files/linux/{{ dynatrace_wsagent_linux_installer_file_name }}" dest="{{ dynatrace_wsagent_linux_install_dir }}"
   sudo: yes
