--- a/tasks/install-dynatrace-wsagent-linux.yml
+++ b/tasks/install-dynatrace-wsagent-linux.yml
@@ -1,14 +1,17 @@
 ---
 - name: Check if the Dynatrace Web Server Agent installer is provided locally
   local_action: stat path="{{ playbook_dir }}/roles/{{ dynatrace_wsagent_role_name }}/files/linux/{{ dynatrace_wsagent_linux_installer_file_name }}"
-  register: dynatrace_wsagent_installer_provided
+  register: dynatrace_wsagent_installer_file_provided
 
-- name: Fail if the Dynatrace Web Server Agent installer is not provided locally
-  fail: msg="The Dynatrace Web Server Agent installer is not provided at {{ playbook_dir }}/roles/{{ dynatrace_wsagent_role_name }}/files/linux/{{ dynatrace_wsagent_linux_installer_file_name }}."
-  when: not dynatrace_wsagent_installer_provided.stat.exists
+- name: Check if the Dynatrace Web Server Agent installer is provided by URL
+  local_action: get_url url="{{ dynatrace_wsagent_linux_installer_file_url }}" dest="{{ playbook_dir }}/roles/{{ dynatrace_wsagent_role_name }}/files/linux/{{ dynatrace_wsagent_linux_installer_file_name }}" force=yes
+  when: not dynatrace_wsagent_installer_file_provided.stat.exists
+  register: dynatrace_wsagent_installer_url_provided
+  ignore_errors: true
+
+- name: Fail if the Dynatrace Web Server Agent installer is not provided
+  fail: msg="The Dynatrace Web Server Agent installer is not provided at {{ playbook_dir }}/roles/{{ dynatrace_wsagent_role_name }}/files/linux/{{ dynatrace_wsagent_linux_installer_file_name }} and could not be downloaded from {{ dynatrace_wsagent_linux_installer_file_url }}."
+  when: (not dynatrace_wsagent_installer_file_provided.stat.exists) and (dynatrace_wsagent_installer_url_provided.failed is defined and dynatrace_wsagent_installer_url_provided.failed)
 
 - include: linux/install-dynatrace-user.yml
-  when: dynatrace_wsagent_installer_provided.stat.exists
-
 - include: linux/install-dynatrace-wsagent.yml
-  when: dynatrace_wsagent_installer_provided.stat.exists
