--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 dynatrace_wsagent_linux_install_dir: /opt
 dynatrace_wsagent_linux_installer_file_name: dynatrace-wsagent.tar
+dynatrace_wsagent_linux_installer_file_url: http://localhost/dynatrace/dynatrace-wsagent.tar
 
 dynatrace_wsagent_name: dtwsagent
 dynatrace_wsagent_collector_hostname: localhost
