--- a/tasks/linux/install-dynatrace-wsagent.yml
+++ b/tasks/linux/install-dynatrace-wsagent.yml
@@ -47,7 +47,22 @@
   shell: rm -rf dynatrace-wsagent-*.sh dynatrace-wsagent-*.tar chdir={{ dynatrace_wsagent_linux_install_dir }}
   sudo: yes
 
-- include: install-dynatrace-wsagent-initd-scripts.yml
+- name: Compute the Dynatrace Web Server Agent's start runlevels for Ubuntu and Debian based distros
+  set_fact:
+    linux_service_start_runlevels="2 3 4 5"
+    linux_service_stop_runlevels="0 1 6"
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+- name: Compute the Dynatrace Web Server Agent's start runlevels for CentOS and Red Hat based distros
+  set_fact:
+    linux_service_start_runlevels="3 5"
+    linux_service_stop_runlevels="0 1 2 6"
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+
+- name: Make the '{{ item }}' init script available in /etc/init.d
+  template: src=../../templates/linux/init.d/{{ item }}.j2 dest=/etc/init.d/{{ item }} owner=root group=root mode=0755
+  with_items: dynatrace_wsagent_linux_service_names
+  sudo: yes
 
 - name: Configure the name in the Dynatrace Web Server Agent's 'dtwsagent.ini' file
   lineinfile: dest={{ dynatrace_wsagent_linux_install_dir }}/dynatrace/agent/conf/dtwsagent.ini regexp='^Name .*' line='Name {{ dynatrace_wsagent_name }}'
