--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ dynatrace_wsagent_collector_port: 9998
 dynatrace_wsagent_user: dynatrace
 dynatrace_wsagent_group: dynatrace
 
-dynatrace_wsagent_role_name: dynatrace.Dynatrace-WebServer-Agent
+dynatrace_wsagent_role_name: Dynatrace.Dynatrace-WebServer-Agent
 
 # Do not change anything below unless you know what you are doing!
 dynatrace_wsagent_linux_service_names: [dynaTraceWebServerAgent]
