--- a/tasks/linux/install-dynatrace-wsagent.yml
+++ b/tasks/linux/install-dynatrace-wsagent.yml
@@ -60,7 +60,7 @@
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
 
 - name: Make the '{{ item }}' init script available in /etc/init.d
-  template: src=../../templates/linux/init.d/{{ item }}.j2 dest=/etc/init.d/{{ item }} owner=root group=root mode=0755
+  template: src=templates/linux/init.d/{{ item }}.j2 dest=/etc/init.d/{{ item }} owner=root group=root mode=0755
   with_items: dynatrace_wsagent_linux_service_names
   sudo: yes
 
