--- a/tasks/linux/install-dynatrace-user.yml
+++ b/tasks/linux/install-dynatrace-user.yml
@@ -1,4 +1,4 @@
 ---
 - name: Install system user "{{ dynatrace_wsagent_user }}"
   user: name={{ dynatrace_wsagent_user }} comment='Dynatrace user' system=yes
-  sudo: yes
+  become: yes
