--- a/tasks/linux/install-dynatrace-wsagent.yml
+++ b/tasks/linux/install-dynatrace-wsagent.yml
@@ -2,20 +2,20 @@
 - name: Create the installation directory {{ dynatrace_wsagent_linux_install_dir }}
   file: path="{{ dynatrace_wsagent_linux_install_dir }}" state=directory
   register: dynatrace_wsagent_create_install_dir_result
-  sudo: yes
+  become: yes
 
 - name: Change ownership of the installation directory if it had to be created
   file: path="{{ dynatrace_wsagent_linux_install_dir }}" owner={{ dynatrace_wsagent_group }} group={{ dynatrace_wsagent_group }}
   when: dynatrace_wsagent_create_install_dir_result|changed
-  sudo: yes
+  become: yes
 
 - name: Unarchive the Dynatrace Web Server Agent installer to {{ dynatrace_wsagent_linux_install_dir }}
   unarchive: src="{{ playbook_dir }}/roles/{{ dynatrace_wsagent_role_name }}/files/linux/{{ dynatrace_wsagent_linux_installer_file_name }}" dest="{{ dynatrace_wsagent_linux_install_dir }}"
-  sudo: yes
+  become: yes
 
 - name: Stop and disable running Dynatrace Web Server Agent services
-  sudo: yes
   service: name=dynaTraceWebServerAgent state=stopped enabled=no
+  become: yes
   ignore_errors: yes
 
 - name: Sleep for 5 seconds...
@@ -23,28 +23,28 @@
 
 - name: Install the Dynatrace Web Server Agent to {{ dynatrace_wsagent_linux_install_dir }}
   shell: /bin/sh dynatrace-wsagent*.sh chdir={{ dynatrace_wsagent_linux_install_dir }}
-  sudo: yes
+  become: yes
 
 - name: Gather the name of the installation directory
   shell: find . -maxdepth 1 -name dynatrace-\* -type d -printf '%T@ %p\n' | sort -k 1nr | cut -d' ' -f2 | head -1 chdir={{ dynatrace_wsagent_linux_install_dir }}
   register: dynatrace_wsagent_installed_version_dir
-  sudo: yes
+  become: yes
 
 - name: Change ownership of the installation directory
   file: path={{ dynatrace_wsagent_linux_install_dir }}/{{ dynatrace_wsagent_installed_version_dir.stdout }} owner={{ dynatrace_wsagent_user }} group={{ dynatrace_wsagent_group }} state=directory recurse=yes
-  sudo: yes
+  become: yes
 
 - name: Change mode of the installation directory
   file: path={{ dynatrace_wsagent_linux_install_dir }}/{{ dynatrace_wsagent_installed_version_dir.stdout }} mode=0755
-  sudo: yes
+  become: yes
 
 - name: Create a symlink of the actual installation directory to {{ dynatrace_wsagent_linux_install_dir }}/dynatrace
   file: src={{ dynatrace_wsagent_linux_install_dir }}/{{ dynatrace_wsagent_installed_version_dir.stdout }} dest={{ dynatrace_wsagent_linux_install_dir }}/dynatrace owner={{ dynatrace_wsagent_user }} group={{ dynatrace_wsagent_group }} mode=0755 state=link
-  sudo: yes
+  become: yes
 
 - name: Remove the Dynatrace Web Server Agent installer
   shell: rm -rf dynatrace-wsagent-*.sh dynatrace-wsagent-*.tar chdir={{ dynatrace_wsagent_linux_install_dir }}
-  sudo: yes
+  become: yes
 
 - name: Compute the Dynatrace Web Server Agent's start runlevels for Ubuntu and Debian based distros
   set_fact:
@@ -61,16 +61,16 @@
 - name: Make the '{{ item }}' init script available in /etc/init.d
   template: src=templates/linux/init.d/{{ item }}.j2 dest=/etc/init.d/{{ item }} owner=root group=root mode=0755
   with_items: dynatrace_wsagent_linux_service_names
-  sudo: yes
+  become: yes
 
 - name: Configure the name in the Dynatrace Web Server Agent's 'dtwsagent.ini' file
   lineinfile: dest={{ dynatrace_wsagent_linux_install_dir }}/dynatrace/agent/conf/dtwsagent.ini regexp='^Name .*' line='Name {{ dynatrace_wsagent_name }}'
-  sudo: yes
+  become: yes
 
 - name: Configure the Dynatrace Collector host in the Dynatrace Web Server Agent's 'dtwsagent.ini' file
   lineinfile: dest={{ dynatrace_wsagent_linux_install_dir }}/dynatrace/agent/conf/dtwsagent.ini regexp='^Server .*' line='Server {{ dynatrace_wsagent_collector_hostname }}:{{ dynatrace_wsagent_collector_port }}'
-  sudo: yes
+  become: yes
 
 - name: Enable and start Dynatrace Web Server Agent services
-  sudo: yes
   service: name=dynaTraceWebServerAgent state=restarted sleep=5 enabled=yes
+  become: yes
