--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ dynatrace_wsagent_name: dtwsagent
 dynatrace_wsagent_collector_hostname: localhost
 dynatrace_wsagent_collector_port: 9998
 
-dynatrace_wsagent_user: dynatrace
+dynatrace_wsagent_owner: dynatrace
 dynatrace_wsagent_group: dynatrace
 
 dynatrace_wsagent_role_name: Dynatrace.Dynatrace-WebServer-Agent
