--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 dynatrace_wsagent_linux_install_dir: /opt
-dynatrace_wsagent_linux_installer_file_name: dynatrace-wsagent.tar
-dynatrace_wsagent_linux_installer_file_url: http://downloads.dynatracesaas.com/6.3/dynatrace-wsagent-linux-x64.tar
+dynatrace_wsagent_linux_installer_file_name: dynatrace-wsagent-linux-x64.tar
+dynatrace_wsagent_linux_installer_file_url: "http://downloads.dynatracesaas.com/6.3/{{ dynatrace_wsagent_linux_installer_file_name }}"
 
 dynatrace_wsagent_name: dtwsagent
 dynatrace_wsagent_collector_hostname: localhost
